--- a/index.html
+++ b/index.html
@@ -25,11 +25,27 @@
     * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Cairo', sans-serif; }
     html { scroll-behavior: smooth; }
     body {
-      background: transparent;
+      background:
+        radial-gradient(1400px 700px at 85% -15%, rgba(107,90,224,0.22), transparent 60%),
+        radial-gradient(1000px 600px at 10% 25%, rgba(217,70,122,0.18), transparent 55%),
+        radial-gradient(900px 500px at 50% 85%, rgba(245,158,11,0.14), transparent 60%),
+        linear-gradient(180deg, #f9fafb 0%, #ffffff 40%, #f8fafc 100%);
       color: var(--ink);
       line-height: 1.7;
       position: relative;
       overflow-x: hidden;
+    }
+
+    /* subtle global grain texture */
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='120' height='120' filter='url(%23n)' opacity='0.035'/%3E%3C/svg%3E");
+      pointer-events: none;
+      z-index: 0;
+    }
+    }
     }
 
     /* ensure content stays above atmospheric blobs */
@@ -39,6 +55,18 @@
     }
 
     
+    /* ================= REVEAL (GLOBAL) ================= */
+    .reveal {
+      opacity: 0;
+      transform: translateY(12px);
+      transition: opacity .8s ease, transform .8s ease;
+      will-change: opacity, transform;
+    }
+    .reveal.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
     /* ================= HERO ================= */
     header {
       min-height: 100vh;
@@ -48,6 +76,11 @@
       text-align: center;
       padding: 40px 20px;
       position: relative;
+      background:
+        linear-gradient(180deg, rgba(255,255,255,0.85), rgba(255,255,255,1));
+      backdrop-filter: saturate(120%) blur(2px);
+      transform: translateZ(0);
+    }
     }
 
     .hero {
@@ -58,24 +91,32 @@
 
     .brand-mark {
       font-size: clamp(3.5rem, 8vw, 6.5rem);
-      font-weight: 800;
+      font-weight: 900;
       letter-spacing: 0.35em;
-      color: var(--ink);
       margin-bottom: 14px;
-      opacity: 0;
-      transform: translateY(10px);
-      animation: fadeUp 0.8s ease forwards;
+      background: linear-gradient(120deg, #6b5ae0, #d9467a, #f59e0b, #6b5ae0);
+      background-size: 300% 300%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: shimmer 6s ease-in-out infinite;
+    }
+
+    @keyframes shimmer {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     .brand-tagline {
-      font-size: 0.9rem;
-      letter-spacing: 0.4em;
+      font-size: 0.95rem;
+      letter-spacing: 0.5em;
       text-transform: uppercase;
-      color: var(--muted);
+      font-weight: 700;
+      background: linear-gradient(90deg, #f59e0b, #d9467a, #6b5ae0);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       margin-bottom: 42px;
-      opacity: 0;
-      animation: fadeUp 0.8s ease forwards;
-      animation-delay: .15s;
+      opacity: 0.95;
     }
 
         }
@@ -124,7 +165,8 @@
     section {
       padding: 140px 20px;
       border-top: none;
-      background: transparent;
+      background:
+        linear-gradient(180deg, rgba(255,255,255,0.75), rgba(255,255,255,0.95));
     }
 
     .impact {
@@ -308,18 +350,18 @@
   <button onclick="toggleLang()">EN</button>
 </div>
 
-<header>
+<header data-parallax>
   <div class="hero">
-    <div class="brand-mark">AMETHYST</div>
-    <div class="brand-tagline">SHINE IN HEALING</div>
-    <h1 id="heroTitle">نصنع قادة الطب<br>لا مجرد طلبة</h1>
-    <p id="heroText">Amethyst Club هو مجتمع طلابي طبي يقوده الطلبة، ويؤمن بأن المعرفة، التأثير، والخدمة هي أساس التغيير الحقيقي.</p>
-    <a href="#impact" class="cta-main" id="heroBtn">اكتشف أثرنا</a>
+    <div class="brand-mark reveal">AMETHYST</div>
+    <div class="brand-tagline reveal">SHINE IN HEALING</div>
+    <h1 id="heroTitle" class="reveal">نصنع قادة الطب<br>لا مجرد طلبة</h1>
+    <p id="heroText" class="reveal">Amethyst Club هو مجتمع طلابي طبي يقوده الطلبة، ويؤمن بأن المعرفة، التأثير، والخدمة هي أساس التغيير الحقيقي.</p>
+    <a href="#impact" class="cta-main reveal" id="heroBtn">اكتشف أثرنا</a>
   </div>
 </header>
 
 <section id="impact">
-  <div class="impact">
+  <div class="impact reveal">
     <div><h2>+10</h2><p id="i1">نشاط علمي وثقافي وتطبيقي</p></div>
     <div><h2>+50</h2><p id="i2">طالب مستفيد</p></div>
     <div><h2>+2</h2><p id="i3">حملة توعوية</p></div>
@@ -327,13 +369,13 @@
 </section>
 
 <section>
-  <div class="statement" id="statementText">
+  <div class="statement reveal" id="statementText">
     لسنا ناديًا يشرح الطب فقط، بل مساحة تصنع الوعي، المسؤولية، والإنسان قبل الطبيب.
   </div>
 </section>
 
 <section>
-  <div class="activities">
+  <div class="activities reveal">
     <div>
       <h3 id="actTitle">التعلّم خارج القاعات</h3>
       <p id="actText">أنشطتنا ليست محاضرات تقليدية، بل تجارب حقيقية تربط المعرفة بالواقع، وتبني شخصية الطبيب قبل مهاراته.</p>
@@ -342,7 +384,7 @@
   </div>
 </section>
 
-<section class="cta">
+<section class="cta reveal">
   <h2 id="ctaTitle">كن جزءًا من التجربة</h2>
   <div class="cta-links">
     <a href="https://www.instagram.com/amethyst__club/" target="_blank" id="ctaInstagram">Instagram</a>
@@ -379,6 +421,27 @@
       location.reload();
     }
   }
+  /* soft parallax effect */
+  const parallax = document.querySelector('[data-parallax]');
+  window.addEventListener('scroll', () => {
+    const y = window.scrollY * 0.15;
+    parallax.style.transform = `translateY(${y}px)`;
+  });
+  // ===== REVEAL OBSERVER =====
+  const revealObserver = new IntersectionObserver(
+    entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+          revealObserver.unobserve(entry.target);
+        }
+      });
+    },
+    { threshold: 0.12 }
+  );
+
+  document.querySelectorAll('.reveal').forEach(el => revealObserver.observe(el));
+
 </script>
 
 </body>
