--- a/activities.html
+++ b/activities.html
@@ -209,7 +209,7 @@ footer{padding:50px 16px;text-align:center;color:var(--muted);border-top:1px sol
 <p>كما عرفت الحملة تفاعلًا إيجابيًا من الحضور، من خلال طرح الأسئلة ومناقشة مختلف الجوانب الطبية والأخلاقية المرتبطة بالتلقيح، بما يعكس وعي الطلبة بأهمية الوقاية ودورهم المستقبلي كفاعلين في المجال الصحي.</p>
 <p>ويعرب الناديان عن فخرهما بأعضائهما لما أبدوه من <strong>التزام ومسؤولية</strong> في المساهمة بحماية صحة الفرد والمجتمع، وترسيخ ثقافة التوعية الصحية والعمل الطبي التطوعي داخل الوسط الجامعي.</p>
 </div>
-<div class="event-media"><img loading="lazy" src="images/vaccination-1.jpg"><img loading="lazy" src="images/vaccination-3.jpg"><img loading="lazy" src="images/vaccination-4.jpg"></div>
+<div class="event-media"><img loading="lazy" src="images/vaccination-1.jpg"><img loading="lazy" src="images/vaccination-3.jpg"></div>
 </div>
 </li>
 
@@ -253,7 +253,7 @@ footer{padding:50px 16px;text-align:center;color:var(--muted);border-top:1px sol
 <p>مبادرة إنسانية متكاملة قام بها أعضاء <strong>Amethyst Club</strong>، شملت جمع تبرعات طوعية واقتناء هدايا رمزية.</p>
 <p>تم توزيع الهدايا على مرضى السرطان من <strong>الكبار</strong> بمستشفى <strong>فرانتز فانون</strong>، وعلى <strong>الأطفال</strong> بمستشفى <strong>حسيبة بن بوعلي</strong> بولاية <strong>البليدة</strong>، في زيارات ميدانية هدفت إلى إدخال السرور وتقديم الدعم النفسي.</p>
 </div>
-<div class="event-media"><img loading="lazy" src="images/solidarity-1.jpg"><img loading="lazy" src="images/solidarity-2.jpg"><img loading="lazy" src="images/solidarity-3.jpg"></div></div>
+<div class="event-media"><img loading="lazy" src="images/solidarity-1.jpg"><img loading="lazy" src="images/solidarity-2.jpg"></div></div>
 </li>
 
 <li class="major-event" onclick="toggleInnerEvent(event,this)">
