--- a/activities.html
+++ b/activities.html
@@ -6,7 +6,10 @@
   <title>أنشطة Amethyst Club</title>
 
   <!-- SEO -->
-  <meta name="description" content="أنشطة Amethyst Club الطبية: أيام دراسية، حملات توعوية، دورات تكوينية، ومبادرات إنسانية." />
+ <!-- Favicon (Tab Icon) -->
+<link rel="icon" type="image/png" href="images/logo.png" />
+<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+ <meta name="description" content="أنشطة Amethyst Club الطبية: أيام دراسية، حملات توعوية، دورات تكوينية، ومبادرات إنسانية." />
   <meta name="keywords" content="Amethyst Club, نادي طبي, أنشطة طبية, أيام دراسية, حملات توعوية, طب الجزائر" />
   <meta name="robots" content="index, follow" />
 
