--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- ===== GLOBAL SEO ===== -->
-  <title>Amethyst Club | Student Medical Club in Algeria</title>
+  <title>Amethyst Club | نادي طلابي طبي في الجزائر</title>
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/favicon.png" />
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 
-  <meta name="description" content="Amethyst Club — نادي طلابي طبي يقوده الطلبة، يهدف لصناعة قادة المستقبل عبر العلم، التوعية الصحية، والعمل الإنساني في الجزائر." />
-  <meta name="keywords" content="Amethyst Club, medical club, student medical club, health awareness, Algeria" />
+  <meta name="description"
+    content="Amethyst Club — نادي طلابي طبي يقوده الطلبة، يهدف لصناعة قادة المستقبل عبر العلم، التوعية الصحية، والعمل الإنساني في الجزائر." />
+  <meta name="keywords"
+    content="Amethyst Club, medical club, student medical club, health awareness, Algeria, نادي طبي, نادي طلابي طبي, توعية صحية, الجزائر" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://amethystclub.github.io/" />
 
@@ -22,7 +25,8 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Amethyst Club" />
-  <meta property="og:description" content="Student-led medical club shaping future leaders through science and service." />
+  <meta property="og:description"
+    content="Student-led medical club shaping future leaders through science and service." />
   <meta property="og:site_name" content="Amethyst Club" />
   <meta property="og:image" content="https://amethystclub.github.io/images/og-cover.jpg" />
 
@@ -52,245 +56,437 @@
   }
   </script>
 
-<style>
-:root {
-  --ink:#0f172a;
-  --muted:#475569;
-  --accent:#6b5ae0;
-  --line:#e5e7eb;
-}
+  <style>
+  :root {
+    --ink: #0f172a;
+    --muted: #475569;
+    --accent: #6b5ae0;
+    --line: #e5e7eb;
+  }
 
-* {
-  box-sizing:border-box;
-  margin:0;
-  padding:0;
-  font-family:'Cairo',sans-serif;
-}
+  /* Resets and general styles */
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
 
-html { scroll-behavior:smooth; }
+  html {
+    scroll-behavior: smooth;
+  }
 
-body {
-  background:
-    radial-gradient(1400px 700px at 85% -15%, rgba(107,90,224,.22), transparent 60%),
-    radial-gradient(1000px 600px at 10% 25%, rgba(217,70,122,.18), transparent 55%),
-    radial-gradient(900px 500px at 50% 85%, rgba(245,158,11,.14), transparent 60%),
-    linear-gradient(180deg,#f9fafb,#fff,#f8fafc);
-  color:var(--ink);
-  line-height:1.7;
-  overflow-x:hidden;
-}
+  body {
+    background:
+      radial-gradient(1400px 700px at 85% -15%, rgba(107, 90, 224, .22), transparent 60%),
+      radial-gradient(1000px 600px at 10% 25%, rgba(217, 70, 122, .18), transparent 55%),
+      radial-gradient(900px 500px at 50% 85%, rgba(245, 158, 11, .14), transparent 60%),
+      linear-gradient(180deg, #f9fafb, #fff, #f8fafc);
+    color: var(--ink);
+    line-height: 1.7;
+    overflow-x: hidden;
+    font-family: 'Cairo', sans-serif;
+    /* Apply font to the body for inheritance */
+  }
 
-body::after {
-  content:"";
-  position:fixed;
-  inset:0;
-  background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4'/%3E%3C/filter%3E%3Crect width='120' height='120' filter='url(%23n)' opacity='0.035'/%3E%3C/svg%3E");
-  pointer-events:none;
-  z-index:0;
-}
+  body::after {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4'/%3E%3C/filter%3E%3Crect width='120' height='120' filter='url(%23n)' opacity='0.035'/%3E%3C/svg%3E");
+    pointer-events: none;
+    z-index: 0;
+  }
 
-body > * { position:relative; z-index:1; }
+  body>* {
+    position: relative;
+    z-index: 1;
+  }
 
-.reveal {
-  opacity:0;
-  transform:translateY(12px);
-  transition:.8s ease;
-}
+  /* Reveal animation */
+  .reveal {
+    opacity: 0;
+    transform: translateY(12px);
+    transition: .8s ease;
+  }
 
-.reveal.visible {
-  opacity:1;
-  transform:none;
-}
+  .reveal.visible {
+    opacity: 1;
+    transform: none;
+  }
 
-/* HERO */
-header {
-  min-height:88vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
-  padding:32px 20px;
-}
+  /* HERO */
+  header {
+    min-height: 88vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 32px 20px;
+  }
 
-.hero { max-width:1100px; }
+  .hero {
+    max-width: 1100px;
+  }
 
-.brand-mark {
-  font-size:clamp(3rem,7vw,5.6rem);
-  font-weight:900;
-  letter-spacing:.32em;
-  background:linear-gradient(120deg,#6b5ae0,#d9467a,#f59e0b,#6b5ae0);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-  animation:shimmer 6s infinite;
-}
+  .brand-mark {
+    font-size: clamp(3rem, 7vw, 5.6rem);
+    font-weight: 900;
+    letter-spacing: .32em;
+    background: linear-gradient(120deg, #6b5ae0, #d9467a, #f59e0b, #6b5ae0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shimmer 6s infinite;
+  }
 
-@keyframes shimmer {
-  0%{background-position:0%}
-  50%{background-position:100%}
-  100%{background-position:0%}
-}
+  @keyframes shimmer {
+    0% {
+      background-position: 0%
+    }
 
-.brand-tagline {
-  font-size:.85rem;
-  letter-spacing:.45em;
-  font-weight:700;
-  margin:24px 0;
-  background:linear-gradient(90deg,#f59e0b,#d9467a,#6b5ae0);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-}
+    50% {
+      background-position: 100%
+    }
 
-.hero h1 {
-  font-size:clamp(2.6rem,5.5vw,4.6rem);
-  margin-bottom:20px;
-}
+    100% {
+      background-position: 0%
+    }
+  }
 
-.hero p {
-  max-width:760px;
-  margin:0 auto 36px;
-  color:var(--muted);
-}
+  .brand-tagline {
+    font-size: .85rem;
+    letter-spacing: .45em;
+    font-weight: 700;
+    margin: 24px 0;
+    background: linear-gradient(90deg, #f59e0b, #d9467a, #6b5ae0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
-.cta-main {
-  display:inline-block;
-  padding:18px 52px;
-  border-radius:999px;
-  background:var(--accent);
-  color:#fff;
-  text-decoration:none;
-  font-weight:600;
-  box-shadow:0 14px 36px rgba(107,90,224,.4);
-}
+  .hero h1 {
+    font-size: clamp(2.6rem, 5.5vw, 4.6rem);
+    margin-bottom: 20px;
+  }
 
-section { padding:120px 20px; }
+  .hero p {
+    max-width: 760px;
+    margin: 0 auto 36px;
+    color: var(--muted);
+  }
 
-.impact {
-  max-width:1200px;
-  margin:auto;
-  display:grid;
-  gap:60px;
-  text-align:center;
-}
+  .cta-main {
+    display: inline-block;
+    padding: 18px 52px;
+    border-radius: 999px;
+    background: var(--accent);
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    box-shadow: 0 14px 36px rgba(107, 90, 224, .4);
+    transition: background-color 0.3s ease;
+    /* Smooth transition for hover effect */
+  }
 
-@media(min-width:992px){
-  .impact{grid-template-columns:repeat(3,280px);justify-content:center;}
-}
+  .cta-main:hover {
+    background-color: #5a4ae0;
+    /* Darken the color on hover */
+  }
 
-.statement {
-  max-width:960px;
-  margin:auto;
-  font-size:clamp(1.8rem,3vw,2.6rem);
-  text-align:center;
-  font-weight:600;
-}
+  /* Sections */
+  section {
+    padding: 120px 20px;
+  }
 
-.activities {
-  max-width:1100px;
-  margin:auto;
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:80px;
-  align-items:center;
-}
+  .impact {
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    gap: 60px;
+    text-align: center;
+  }
 
-@media(max-width:900px){
-  .activities{grid-template-columns:1fr;text-align:center;}
-}
+  @media(min-width: 992px) {
+    .impact {
+      grid-template-columns: repeat(3, 280px);
+      justify-content: center;
+    }
+  }
 
-footer {
-  padding:60px 20px;
-  text-align:center;
-  font-size:.85rem;
-  color:var(--muted);
-  border-top:1px solid var(--line);
-}
+  .statement {
+    max-width: 960px;
+    margin: auto;
+    font-size: clamp(1.8rem, 3vw, 2.6rem);
+    text-align: center;
+    font-weight: 600;
+  }
 
-.lang-switch {
-  position:fixed;
-  top:20px;
-  left:20px;
-}
+  .activities {
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+    align-items: center;
+  }
 
-.lang-switch button {
-  padding:6px 14px;
-  border-radius:999px;
-  border:1px solid var(--line);
-  background:#fff;
-  cursor:pointer;
-}
-</style>
+  @media(max-width: 900px) {
+    .activities {
+      grid-template-columns: 1fr;
+      text-align: center;
+    }
+  }
+
+  /* Footer */
+  footer {
+    padding: 60px 20px;
+    text-align: center;
+    font-size: .85rem;
+    color: var(--muted);
+    border-top: 1px solid var(--line);
+  }
+
+  /* Language Switch */
+  .lang-switch {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 10;
+    /* Ensure it's above other elements */
+  }
+
+  .lang-switch button {
+    padding: 6px 14px;
+    border-radius: 999px;
+    border: 1px solid var(--line);
+    background: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    /* Smooth transition for hover effect */
+  }
+
+  .lang-switch button:hover {
+    background-color: var(--accent);
+    color: #fff;
+  }
+
+  /* Loading indicator */
+  .loading-indicator {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent);
+    /* Adjust color as needed */
+    z-index: 1000;
+    /* Ensure it's on top */
+    opacity: 0;
+    /* Initially hidden */
+    transition: opacity 0.3s ease;
+  }
+
+  .loading-indicator.active {
+    opacity: 1;
+    /* Make visible when active */
+  }
+  </style>
 </head>
 
 <body>
 
-<div class="lang-switch">
-  <button onclick="toggleLang()">EN</button>
-</div>
+  <div class="loading-indicator"></div>
 
-<header>
-  <div class="hero">
-    <div class="brand-mark reveal">AMETHYST</div>
-    <div class="brand-tagline reveal">SHINE IN HEALING</div>
-    <h1 id="heroTitle" class="reveal">نصنع قادة الطب<br>لا مجرد طلبة</h1>
-    <p id="heroText" class="reveal">
-      Amethyst Club هو مجتمع طلابي طبي يقوده الطلبة، ويؤمن بأن المعرفة والتأثير والخدمة أساس التغيير.
-    </p>
-    <a href="#impact" class="cta-main reveal" id="heroBtn">اكتشف أثرنا</a>
+  <div class="lang-switch">
+    <button id="langButton" onclick="toggleLang()">EN</button>
   </div>
-</header>
 
-<section id="impact">
-  <div class="impact reveal">
-    <div><h2>+10</h2><p>نشاط علمي وتطبيقي</p></div>
-    <div><h2>+50</h2><p>طالب مستفيد</p></div>
-    <div><h2>+2</h2><p>حملة توعوية</p></div>
-  </div>
-</section>
-
-<section>
-  <div class="statement reveal">
-    لسنا ناديًا يشرح الطب فقط، بل مساحة تصنع الوعي والمسؤولية والإنسان قبل الطبيب.
-  </div>
-</section>
-
-<section>
-  <div class="activities reveal">
-    <div>
-      <h3>التعلّم خارج القاعات</h3>
-      <p>أنشطتنا تجارب حقيقية تربط المعرفة بالواقع.</p>
-      <a href="activities.html">استكشف أنشطتنا →</a>
+  <header>
+    <div class="hero">
+      <div class="brand-mark reveal">AMETHYST</div>
+      <div class="brand-tagline reveal">SHINE IN HEALING</div>
+      <h1 id="heroTitle" class="reveal">نصنع قادة الطب<br>لا مجرد طلبة</h1>
+      <p id="heroText" class="reveal">
+        Amethyst Club هو مجتمع طلابي طبي يقوده الطلبة، ويؤمن بأن المعرفة والتأثير والخدمة أساس التغيير.
+      </p>
+      <a href="#impact" class="cta-main reveal" id="heroBtn">اكتشف أثرنا</a>
     </div>
-  </div>
-</section>
+  </header>
 
-<footer>
-  © 2025 Amethyst Club — All rights reserved
-</footer>
+  <section id="impact">
+    <div class="impact reveal">
+      <div>
+        <h2>+10</h2>
+        <p id="impactActivity">نشاط علمي وتطبيقي</p>
+      </div>
+      <div>
+        <h2>+50</h2>
+        <p id="impactStudent">طالب مستفيد</p>
+      </div>
+      <div>
+        <h2>+2</h2>
+        <p id="impactCampaign">حملة توعوية</p>
+      </div>
+    </div>
+  </section>
 
-<script>
-let isArabic=true;
-function toggleLang(){
-  if(isArabic){
-    document.documentElement.lang='en';
-    document.documentElement.dir='ltr';
-    heroTitle.innerHTML='Shaping Future Medical Leaders';
-    heroText.innerText='Amethyst Club is a student-led medical community driven by knowledge, impact, and service.';
-    heroBtn.innerText='Discover Our Impact';
-    isArabic=false;
-  }else location.reload();
-}
+  <section>
+    <div class="statement reveal" id="statementText">
+      لسنا ناديًا يشرح الطب فقط، بل مساحة تصنع الوعي والمسؤولية والإنسان قبل الطبيب.
+    </div>
+  </section>
 
-const observer=new IntersectionObserver(e=>{
-  e.forEach(x=>{
-    if(x.isIntersecting){
-      x.target.classList.add('visible');
-      observer.unobserve(x.target);
+  <section>
+    <div class="activities reveal">
+      <div>
+        <h3 id="activitiesTitle">التعلّم خارج القاعات</h3>
+        <p id="activitiesText">أنشطتنا تجارب حقيقية تربط المعرفة بالواقع.</p>
+        <a id="activitiesLink" href="activities.html">استكشف أنشطتنا →</a>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 Amethyst Club — All rights reserved
+  </footer>
+
+  <script>
+  let isArabic = true;
+  const langButton = document.getElementById('langButton');
+  const heroTitle = document.getElementById('heroTitle');
+  const heroText = document.getElementById('heroText');
+  const heroBtn = document.getElementById('heroBtn');
+  const impactActivity = document.getElementById('impactActivity');
+  const impactStudent = document.getElementById('impactStudent');
+  const impactCampaign = document.getElementById('impactCampaign');
+  const statementText = document.getElementById('statementText');
+  const activitiesTitle = document.getElementById('activitiesTitle');
+  const activitiesText = document.getElementById('activitiesText');
+  const activitiesLink = document.getElementById('activitiesLink');
+  const loadingIndicator = document.querySelector('.loading-indicator');
+
+  // Function to show loading indicator
+  function showLoadingIndicator() {
+    loadingIndicator.classList.add('active');
+  }
+
+  // Function to hide loading indicator
+  function hideLoadingIndicator() {
+    loadingIndicator.classList.remove('active');
+  }
+
+  function switchToArabic() {
+    showLoadingIndicator(); // Show loading indicator
+
+    document.documentElement.lang = 'ar';
+    document.documentElement.dir = 'rtl';
+    langButton.innerText = 'EN';
+
+    heroTitle.innerText = 'نصنع قادة الطب\nلا مجرد طلبة';
+    heroText.innerText = 'Amethyst Club هو مجتمع طلابي طبي يقوده الطلبة، ويؤمن بأن المعرفة والتأثير والخدمة أساس التغيير.';
+    heroBtn.innerText = 'اكتشف أثرنا';
+
+    impactActivity.innerText = 'نشاط علمي وتطبيقي';
+    impactStudent.innerText = 'طالب مستفيد';
+    impactCampaign.innerText = 'حملة توعوية';
+
+    statementText.innerText = 'لسنا ناديًا يشرح الطب فقط، بل مساحة تصنع الوعي والمسؤولية والإنسان قبل الطبيب.';
+
+    activitiesTitle.innerText = 'التعلّم خارج القاعات';
+    activitiesText.innerText = 'أنشطتنا تجارب حقيقية تربط المعرفة بالواقع.';
+    activitiesLink.innerText = 'استكشف أنشطتنا ←';
+
+    isArabic = true;
+
+    hideLoadingIndicator(); // Hide loading indicator
+  }
+
+  function switchToEnglish() {
+    showLoadingIndicator(); // Show loading indicator
+
+    document.documentElement.lang = 'en';
+    document.documentElement.dir = 'ltr';
+    langButton.innerText = 'AR'; // Update button text
+
+    // Update Hero Section
+    heroTitle.innerText = 'Shaping Future Medical Leaders';
+    heroText.innerText = 'Amethyst Club is a student-led medical community driven by knowledge, impact, and service.';
+    heroBtn.innerText = 'Discover Our Impact';
+
+    // Update Impact Section
+    impactActivity.innerText = 'Scientific and Applied Activity';
+    impactStudent.innerText = 'Benefited Student';
+    impactCampaign.innerText = 'Awareness Campaign';
+
+    // Update Statement Section
+    statementText.innerText = 'We are not just a club that explains medicine, but a space that creates awareness, responsibility and humanity before the doctor.';
+
+    // Update Activities Section
+    activitiesTitle.innerText = 'Learning Outside the Halls';
+    activitiesText.innerText = 'Our activities are real experiences that connect knowledge with reality.';
+    activitiesLink.innerText = 'Explore our activities →';
+
+    isArabic = false;
+
+    hideLoadingIndicator(); // Hide loading indicator
+  }
+
+  function toggleLang() {
+    if (isArabic) {
+      switchToEnglish();
+    } else {
+      switchToArabic();
     }
-  });
-},{threshold:.12});
+  }
 
-document.querySelectorAll('.reveal').forEach(el=>observer.observe(el));
-</script>
+  // Save language preference to localStorage
+  function setLanguagePreference(lang) {
+    localStorage.setItem('language', lang);
+  }
+
+  // Get language preference from localStorage
+  function getLanguagePreference() {
+    return localStorage.getItem('language');
+  }
+
+  // Function to apply language based on preference
+  function applyLanguagePreference() {
+    const lang = getLanguagePreference();
+    if (lang === 'en') {
+      switchToEnglish();
+    } else {
+      switchToArabic(); // Default to Arabic if no preference or preference is not 'en'
+    }
+  }
+
+  // Call applyLanguagePreference on page load
+  window.addEventListener('load', applyLanguagePreference);
+
+  // Modify toggleLang to set the language preference
+  function toggleLang() {
+    if (isArabic) {
+      switchToEnglish();
+      setLanguagePreference('en');
+    } else {
+      switchToArabic();
+      setLanguagePreference('ar');
+    }
+  }
+
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('visible');
+        observer.unobserve(entry.target);
+      }
+    });
+  }, {
+    threshold: .12
+  });
+
+  document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
+  </script>
 
 </body>
+
 </html>
