--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Amethyst Club | نادي طلابي طبي في الجزائر</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/favicon.png" />
+  <link rel="icon" type="image/png" href="images/logo.png" />
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 
   <meta name="description"
@@ -490,3 +490,4 @@
 </body>
 
 </html>
+
